:lipstick: :construction: fix back url

--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -2,7 +2,7 @@
 %section.pam
   %h2
     %span.hide-on-med-and-up
-      =link_to ml_lists_path, class: "black-text" do
+      =link_to dashboard_ml_user_path, class: "black-text" do
         %i.material-icons arrow_back
     #{@ml_list.name}
   .row
