--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -48,7 +48,7 @@
                 Les inscriptions à cette liste ne sont possible que pour un administrateur
               -when "in_group"
                 Seuls les membres du groupe
-                %b=@ml_list.group.namen
+                %b=@ml_list.group.namens
                 peuvent s'inscrire à cette liste
 
           %p
