--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -28,7 +28,7 @@
 
 
 %nav
-  .nav-wrapper
+  .nav-wrapper{:class => (user_masquerade? ? "masqueraded" : "")}
     =link_to root_path class: "brand-logo" do
       =image_tag "logo_alumni.png", id: "logo"
     %a.button-collapse{"data-activates" => "mobile-demo", :href => "#"}
