--- a/app/views/layouts/_user_widget.html.haml
+++ b/app/views/layouts/_user_widget.html.haml
@@ -15,7 +15,7 @@
 -#    = link_to t('layout.menu.connect'), new_user_session_path, :class =>"bouton bouton_bleu"
 - if user_signed_in?
   %li
-    %a.dropdown-button{"data-activates" => "dropdown1-user-widget", "constrain-width" => "false", "data-beloworigin"=>"true", :href => "#!"}
+    %a.dropdown-button{"data-activates" => "dropdown1-user-widget", "data-constrainwidth"=>"false", "data-beloworigin"=>"true", :href => "#!"}
       %span
         = "#{current_user.firstname}"
         .circle
