--- a/app/views/ml/lists/_ml_members_list.html.haml
+++ b/app/views/ml/lists/_ml_members_list.html.haml
@@ -12,11 +12,15 @@
         -if can?( :admin_members, @ml_list)
           =m[:email]
           .secondary-content
-            %a.dropdown-button.btn-small.btn-floating.btn-flat{"data-activates" => "#{block_id}-dropdown-role#{m[:id]}", "constrain-width" => "false", "data-beloworigin"=>"true", "hover" => "false",  :href => "#"}
+            %a.dropdown-button.btn-small.btn-floating.btn-flat{"data-activates" => "#{block_id}-dropdown-role#{m[:id]}", "data-constrainwidth"=>"false", "data-beloworigin"=>"true", "hover" => "false",  :href => "#"}
               .zmdi.zmdi-more-vert
 
           %div{id: "#{block_id}-dropdown-role#{m[:id]}", class: "dropdown-content"}
             %ul
+              %li
+                %span
+                  %b=m[:name]
+              %li.divider
               -Ml::ListsUser.roles_list.each do |role_name|
                 %li
                   %a{href: "/ml/lists/#{@ml_list.id}/users/set_role/#{m[:id]}?id=#{@ml_list.id}&amp;role=#{role_name}&amp;search=#{@search}", method: :get}
@@ -26,4 +30,5 @@
                 %a{href: "/ml/lists/#{@ml_list.id}/leave/#{m[:id]}?search=#{@search}", method: :get}
                   %i.zmdi.zmdi-delete.icon-padding-list
                   Retirer de la liste
-        %span.new.red.badge{"data-badge-caption" => "#{Ml::ListsUser.roles_list[m[:role]].gsub("member","").capitalize}"}
+        -if Ml::ListsUser.roles_list[m[:role]].gsub("member","").present?
+          %span.new.red.badge{"data-badge-caption" => "#{Ml::ListsUser.roles_list[m[:role]].gsub("member","").capitalize}"}
