--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -79,7 +79,7 @@
             .card
               =form_tag  search_by_id_users_path, :method => :get, :user_id => :id_element, style:"height: 48px"  do
                 .input-field
-                  =autocomplete_field_tag 'Hruid', '', autocomplete_user_hruid_users_path, :id_element => '#id', :placeholder => "prenom.nom.année",type: "search", id: "search"
+                  =search_field_tag 'Search', '',  name: 'query', :id_element => '#id', :placeholder => "prenom.nom.année",type: "search", id: "search"
                   %label.label-icon{:for => "search"}
                     %i.material-icons search
                   =hidden_field_tag "id"
