--- a/app/views/shared/_er_list.html.haml
+++ b/app/views/shared/_er_list.html.haml
@@ -8,7 +8,7 @@
   -if @emails_redirect.select{|e| e.active?}.count == 0
     .card.red.darken-4
       .card-content.white-text
-        Attention ! Tu dois activer une des adresses ci-dessous ou créer un compte Google Gadz.org pour recevoir les mail envoyés à ton adresse gadz.org,
+        Attention ! Tu dois activer une des adresses ci-dessous ou créer un compte Google Gadz.org pour recevoir les emails envoyés à ton adresse gadz.org,
 .card
   .card-content
     %ul#era_list
