--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -14,26 +14,10 @@
         -if can? :create, @new_esa
           .card-action
             / Modal Trigger
-            %a.modal-trigger.waves-effect.waves-light.btn{:href => "#modal1"} Ajouter une adresse
+            %a.modal-trigger.waves-effect.waves-light.btn{:href => "#new-esa"} Ajoute une adresse
             / Modal Structure
-          #modal1.modal.modal-fixed-footer
-            .modal-content
-              %h4 Ajouter une nouvelle adresse
-              =form_for  [@user,@new_esa], :remote=>true  do |f|
-                .input-field.col.m6{style: "margin-bottom: 0px;"}
-                  =f.text_field :email, required: "required", class: ""
-                  =f.label "email"
-                .input-field.col.m6
-                  =f.select :email_virtual_domain_id,EmailVirtualDomain.all.map { |e| ["@"+e.name,e.id] },{}, class:''
-                  =f.label "domaine"
-                .pam
-                  =f.button 'Ajouter',:class => "waves-effect waves-light btn primary-color modal-close"
-            .modal-footer
-              %a.modal-action.modal-close.waves-effect.waves-green.btn-flat{:href => "#!"} Annuler
-
-
-
-
+          #new-esa.modal.modal-fixed-footer
+            =render partial: "users/modals/add_esa", locals: {user: @user,new_esa: @new_esa}
 
     .ma1.col.l2.hide-on-med-and-down
       .center
@@ -46,24 +30,6 @@
       .email-list{ :data => {:url => user_email_redirect_accounts_path(@user, :format => :json)} }
         #redirect
           =render partial: "shared/er_list", locals: {emails_redirect: @emails_redirect}
-
-
-
-        / Modal Structure
-        #modal-add-era.modal.bottom-sheet
-          .modal-content
-            %h4 Ajouter une nouvelle adresse de redirection
-            %p Tu peux ajouter ici une nouvelle adresse vers laquelle seront transfèrés les emails envoyés sur tes adresses gadz.org.
-            =form_for  [@user,@new_era], :remote=>true  do |f|
-              .input-field.s8{style: "margin-bottom: 0px;"}
-                =f.email_field :redirect, required: "required", class: "validate"
-                =label_tag(:redirect, "Entre ici la nouvelle adresse","data-error"=>"Cette addresse n'est pas au bon format")
-
-                =f.submit 'Ajouter cette adresse',:class => "waves-effect waves-light btn", id: :new_email_redirect_account_submit
-                %a.modal-action.modal-close.waves-effect.waves-green.btn-flat{:href => "#!"} Annuler
-          .modal-footer
-
-
 
 
   =javascript_include_tag 'email_redirect_tracking.js' if google_analytics_id
