--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -26,7 +26,7 @@
             / %td= user.email
             %td.hide-on-med-and-down= user.fullname+(user.role ? " - #{user.role.name}" : "")
             %td= user.hruid
-            %td.hide-on-med-and-up
+            %td.hide-on-large-only
               %a.dropdown-button.btn-small.btn-floating.btn-flat{"data-activates" => "dropdown-user#{user.id}", "data-constrainwidth"=>"false", "data-beloworigin"=>"true", "hover" => "false",  :href => "#"}
                 .zmdi.zmdi-more-vert
             %td.hide-on-med-and-down
