--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -30,6 +30,7 @@
       .email-list{ :data => {:url => user_email_redirect_accounts_path(@user, :format => :json)} }
         #redirect
           =render partial: "shared/er_list", locals: {emails_redirect: @emails_redirect}
+      =render(partial: "users/modals/modal_sheet_mobile_only_modals", locals: {modal_partial: "users/modals/add_era",id:'add-era',modal_locals:{user: @user, new_era: @user.email_redirect_accounts.new}})
 
 
 hb  =javascript_include_tag 'email_redirect_tracking.js' if google_analytics_id
