--- a/app/views/users/modals/_add_era.html.haml
+++ b/app/views/users/modals/_add_era.html.haml
@@ -4,7 +4,7 @@
   =form_for  [user,new_era], :remote=>true  do |f|
     .input-field.s8{style: "margin-bottom: 0px;"}
       =f.email_field :redirect, required: "required", class: "validate"
-      =label_tag(:redirect, "Entre ici la nouvelle adresse","data-error"=>"Cette addresse n'est pas au bon format")
+      =label_tag(:redirect, "Entre ici la nouvelle adresse","data-error"=>"Cette adresse n'est pas au bon format")
 
       =f.submit 'Ajouter cette adresse',:class => "waves-effect waves-light btn", id: :new_email_redirect_account_submit
       %a.modal-action.modal-close.waves-effect.waves-green.btn.btn-flat{:href => "#!"} Annuler
