Fix ML index UI

--- a/app/views/ml/lists/index.html.haml
+++ b/app/views/ml/lists/index.html.haml
@@ -1,34 +1,41 @@
-%h1 Listes de diffusion
-=form_tag ml_lists_path(), :method => :get ,class: "mtm"do
-  =text_field_tag :search, params[:search], :placeholder => "Recherche par email", :class => "w100 login", :autofocus => true
-%table
-  %thead
-    %tr
-      %th Name
-      %th Email
-      %th Description
-      %th Alias zenimel
-      %th Aliases
-      %th Diffusion
-      %th Inscription
-      -#%th Is archived
-      %th
+%h2 Listes de diffusion
+.nav
+  .search-wrapper
+    =form_tag ml_lists_path(), :method => :get, id: 'ml_index_search' do
+      .input-field
+        =text_field_tag :search, params[:search], :placeholder => "Recherche par email", :class => "w100 login", :autofocus => true
+        %label.label-icon{:for => "ml_index_search"}
+          %i.material-icons search
+.card
+  .card-content
+    = link_to 'Nouvelle Liste', new_ml_list_path,:class => "waves-effect waves-light btn"
+    %table
+      %thead
+        %tr
+          %th Name
+          %th Email
+          %th Description
+          %th Alias zenimel
+          %th Aliases
+          %th Diffusion
+          %th Inscription
+          -#%th Is archived
+          %th
 
-  %tbody
-    - @ml_lists.each do |ml_list|
-      %tr
-        %td=link_to ml_list.name, ml_list
-        %td= ml_list.email
-        %td= ml_list.description
-        %td= ml_list.redirection_alias
-        %td= ml_list.aliases
-        %td= ml_list.diffusion_policy
-        %td= ml_list.inscription_policy
-        -#%td= ml_list.is_archived
-        %td
-          =link_to 'Edit', edit_ml_list_path(ml_list)
-          =link_to 'Destroy', ml_list, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %tbody
+        - @ml_lists.each do |ml_list|
+          %tr
+            %td=link_to ml_list.name, ml_list
+            %td= ml_list.email
+            %td= ml_list.description
+            %td= ml_list.redirection_alias
+            %td= ml_list.aliases
+            %td= ml_list.diffusion_policy
+            %td= ml_list.inscription_policy
+            -#%td= ml_list.is_archived
+            %td
+              =link_to 'Edit', edit_ml_list_path(ml_list)
+              =link_to 'Destroy', ml_list, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-%br
+    %br
 
-= link_to 'New List', new_ml_list_path
