--- a/app/views/setup/index.html.haml
+++ b/app/views/setup/index.html.haml
@@ -25,10 +25,9 @@
             %b #{@primary_email}
             peuvent être envoyé également sur l'adresse email de ton choix. Cette adresse est également utilisée en cas de problème.
           %div
-            Mon adresse email :
             .input-field.inline
               =email_field_tag :redirect,nil, :size => 40, :required => 'required', :class=> 'validate'
-              =label_tag("redirect", "email@domaine.fr", "data-error"=>"Tu dois entrer ton adresse email au format email@domaine.fr", required: true)
+              =label_tag("redirect", "Mon adresse email", "data-error"=>"Tu dois entrer ton adresse email au format email@domaine.fr", required: true)
         .card-action
           =button_tag "Créer mon compte", class:'waves-effect waves-teal btn'
 
