--- a/app/views/users/modals/_add_era.html.haml
+++ b/app/views/users/modals/_add_era.html.haml
@@ -1,6 +1,13 @@
 .modal-content
   %h4 Ajouter une nouvelle adresse de redirection
   %p Tu peux ajouter ici une nouvelle adresse vers laquelle seront transfèrés les emails envoyés sur tes adresses gadz.org.
+  %p
+    Nous de conseillons d'
+    %b>éviter
+    %span
+      les adresses
+    %b Yahoo, Microsoft (hotmail.com, live.com,..) et dbmail
+    qui refusent régulierement les mails de la communauté.
   =form_for  [user,new_era], :remote=>true  do |f|
     .input-field.s8{style: "margin-bottom: 0px;"}
       =f.email_field :redirect, required: "required", class: "validate"
