:lipstick: :bug: fix modal form add era

--- a/app/views/users/modals/_modal_sheet_mobile_only_modals.html.haml
+++ b/app/views/users/modals/_modal_sheet_mobile_only_modals.html.haml
@@ -1,4 +1,4 @@
-.modal.bottom-sheet{id: "modal-#{id}-mobile"}
+.modal.bottom-sheet.bottom-sheet-big{id: "modal-#{id}-mobile"}
   =render(partial: modal_partial, locals: modal_locals)
 
 .modal{id: "modal-#{id}"}
