--- a/app/views/shared/_ml_list.html.haml
+++ b/app/views/shared/_ml_list.html.haml
@@ -42,7 +42,7 @@
         -if can? :moderate_messages, l
           =link_to ml_list_path(l), class: "waves-effect waves-teal btn " do
             Consulter
-          =link_to "Modérer",l.moderation_link, target: "_blank", :class =>"waves-effect waves-light btn white black-text"
+          =link_to "Modérer",l.moderation_link, target: "_blank", :class =>"waves-effect waves-light btn btn-flat"
         -else
           =link_to ml_list_path(l), class: "waves-effect waves-teal btn" do
             Consulter
