--- a/app/views/postfix_blacklists/_form.html.haml
+++ b/app/views/postfix_blacklists/_form.html.haml
@@ -4,6 +4,7 @@
   .form-inputs
     = f.input :email
     = f.input :reject_text
+    = f.input :commentary
 
   .form-actions
     = f.button :submit
