--- a/app/views/unsubscribe/email_form.html.haml
+++ b/app/views/unsubscribe/email_form.html.haml
@@ -1,7 +1,19 @@
-%h1 Unsubscribe#email_form
-%p Find me in app/views/unsubscribe/email_form.html.haml
-
+%p#notice= notice
+%h2 Vous souhaitez vous désabonner de nos listes de diffusion
 =form_tag(unsubscribe_path, method: "post") do
-  =label_tag(:email, "Email")
-  =text_field_tag(:email)
-  =submit_tag("Vérifier mon identité")
+  .row
+    .l6.s12.col
+      %p
+        Nous devons d'abord vérifier vore identité.
+  .row
+    .l6.s12.col
+
+      .card
+        .card-content
+          %p
+            Merci de remplir ci-dessous l'adresse email sur laquelle vous recevez les mails provenant de nos listes de diffusion
+          .input-field
+            =email_field_tag(:email,nil, :size => 40, :required => 'required', :class=> 'validate')
+            =label_tag('email', "Mon adresse email", "data-error"=>"Tu dois entrer ton adresse email au format email@domaine.fr", required: true)
+          .card-action
+            =submit_tag("Vérifier mon identité", class:'waves-effect waves-teal btn')
