--- a/app/views/unsubscribe/unknown_token.html.haml
+++ b/app/views/unsubscribe/unknown_token.html.haml
@@ -1,1 +1,12 @@
-%p Le jeton contenu dans le lien n'est pas valable ou a déjà été utilisé
+%p#notice= notice
+
+%div.center-align
+  %h2
+    %i.zmdi.zmdi-alert-triangle.icon-padding-list
+  %h2
+    Impossible de continuer ...
+
+  %p
+    Le jeton contenu dans le lien n'est pas valable ou a déjà été utilisé
+
+  =link_to "Envoyer un autre email", unsubscribe_path, class: "waves-effect waves-light btn"
