--- a/app/views/unsubscribe/ml_form.html.haml
+++ b/app/views/unsubscribe/ml_form.html.haml
@@ -18,8 +18,8 @@
           %p
             Selectionnez les listes desquelles vous souhaitez vous désinscrire :
           %p
-            =link_to "Tout cocher","#", class:'waves-effect waves-teal white blue-grey-text'
-            =link_to "Tout décocher","#", class:'waves-effect waves-teal white blue-grey-text'
+            =link_to "Tout cocher","#", class:'waves-effect waves-teal white blue-grey-text', id: 'select-all'
+            =link_to "Tout décocher","#", class:'waves-effect waves-teal white blue-grey-text', id: 'unselect-all'
           #mailinglists
             -@mls.each do |ml|
               .input-field
@@ -27,3 +27,13 @@
                 =label_tag "unsubscribe[#{ml.name}]", ml.name
         .card-action
           =submit_tag("Me désinscrire", class:'waves-effect waves-teal btn')
+
+:javascript
+  $(document).ready(function() {
+    $('#select-all').on('click',function(){
+      $("input[id^='unsubscribe']").prop("checked",true)
+    });
+    $('#unselect-all').on('click',function(){
+      $("input[id^='unsubscribe']").prop("checked",false)
+    });
+  });
