--- a/app/views/unsubscribe_mailer/confirm_email.html.haml
+++ b/app/views/unsubscribe_mailer/confirm_email.html.haml
@@ -1,17 +1,17 @@
 %p Bonjour,
 
-%p Vous avez demandé à vous désinscrire des newsletters Gadz.org.
+%p Vous avez demandé à vous désinscrire des listes de diffusion Gadz.org.
 
 %p Nous vous invitons à confirmer que vous êtes bien à l'origine de cette demande.
 
 .txtcenter.bouton.bouton_bleu
-  =link_to "Selectionner mes newsletters", unsubscribe_url(@token) ,:class => "bouton bouton_orange_1 txtcenter"
+  =link_to "Selectionner mes listes de diffusion", unsubscribe_url(@token) ,:class => "bouton bouton_orange_1 txtcenter"
 
 %p
   Si ce lien ne fonctionne pas, copie l'adresse suivante puis colle-la dans une nouvelle fenêtre de navigateur :
 %p=unsubscribe_token_url(@token)
 
-%p Vous pourrez slectionner les newsletter dont vous souhaitez vous désabonner
+%p Vous pourrez sélectionner les listes de diffusion dont vous souhaitez vous désabonner
 
 %p.small
   Si tu as reçu ce message par erreur, ou si tu n'as pas formulé de demande en ce sens, aucune action supplémentaire de ta part n'est requise. Par conséquent, tu peux ignorer ce message.
