--- a/app/views/unsubscribe/unknown_token.html.haml
+++ b/app/views/unsubscribe/unknown_token.html.haml
@@ -7,6 +7,6 @@
     Impossible de continuer ...
 
   %p
-    Le jeton contenu dans le lien n'est pas valable ou a déjà été utilisé
+    Ce lien a déjà été utilisé ou n'est plus valable. Vous pouvez demander l'envoi d'un mail avec un nouveau lien de désinscription
 
-  =link_to "Envoyer un autre email", unsubscribe_path, class: "waves-effect waves-light btn"
+  =link_to "Envoyer un nouveau mail", unsubscribe_path, class: "waves-effect waves-light btn"
